[gd_scene load_steps=12 format=3 uid="uid://drg0sr7jdfiel"]

[ext_resource type="Script" uid="uid://wt6o27vmhuas" path="res://Code/Scenes/UI/Main/UISlot.gd" id="1_c5ua0"]
[ext_resource type="Texture2D" uid="uid://ct7oa74jhqcwq" path="res://Art/Cards/4 ex Team Magma vs Team Aqua/74.jpg" id="2_4mrr5"]
[ext_resource type="Shader" uid="uid://chaingl03cnx1" path="res://Shaders/Shine2D.gdshader" id="3_46l8x"]
[ext_resource type="Texture2D" uid="uid://d3nrajtlwbvgh" path="res://Art/Cards/4 ex Team Magma vs Team Aqua/84.jpg" id="3_bcik8"]
[ext_resource type="PackedScene" uid="uid://dp781vdb5kvc7" path="res://Scenes/UI/UIComponents/art_button.tscn" id="3_nyxqq"]
[ext_resource type="PackedScene" uid="uid://bs3ila6cpt8n1" path="res://Scenes/UI/UIComponents/types.tscn" id="4_5yd0i"]
[ext_resource type="PackedScene" uid="uid://ekxwkd3amd1t" path="res://Scenes/UI/UIComponents/BuffDisplay.tscn" id="6_mc7hj"]
[ext_resource type="PackedScene" uid="uid://dph43kayde03u" path="res://Scenes/UI/UIComponents/energy_types.tscn" id="6_nykcf"]
[ext_resource type="PackedScene" uid="uid://04qgb8r1r84v" path="res://Scenes/UI/UIComponents/damage_counter.tscn" id="8_0ajf4"]
[ext_resource type="PackedScene" uid="uid://bcuwyo6u5h2fw" path="res://Scenes/UI/UIComponents/conditions.tscn" id="9_0ajf4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nykcf"]
resource_local_to_scene = true
shader = ExtResource("3_46l8x")
shader_parameter/shine_color = Color(0.980392, 0.92549, 0.231373, 0.709804)
shader_parameter/base_color = Color(0.180736, 0.120593, 0.350483, 1)
shader_parameter/pixel_size = 32
shader_parameter/shine_speed = 6.2
shader_parameter/shine_size = 0.12
shader_parameter/shine_bool = false

[node name="ActivePokemon" type="Control"]
custom_minimum_size = Vector2(204, 164)
layout_mode = 3
anchor_right = 0.189
anchor_bottom = 0.228
offset_right = -0.11999512
offset_bottom = -0.16000366
script = ExtResource("1_c5ua0")

[node name="Main" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 196.0
offset_bottom = 164.0
theme_type_variation = &"ListPanel"

[node name="Main" type="VBoxContainer" parent="Main"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = -2

[node name="Header" type="HBoxContainer" parent="Main/Main"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="Name" type="RichTextLabel" parent="Main/Main/Header"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 46)
layout_mode = 2
text = "Team Magma's
Mightyena"

[node name="MaxHP" type="RichTextLabel" parent="Main/Main/Header"]
unique_name_in_owner = true
custom_minimum_size = Vector2(62, 46)
layout_mode = 2
bbcode_enabled = true
text = "[u]HP[/u] 200"

[node name="ArtButton" parent="Main/Main" instance=ExtResource("3_nyxqq")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_nykcf")
layout_mode = 2
benched = false

[node name="TrainerAttached" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -17.0
offset_top = 71.0
offset_right = 31.0
offset_bottom = 131.0
mouse_filter = 2

[node name="Tool" type="TextureRect" parent="TrainerAttached"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(48, 28)
layout_mode = 2
texture = ExtResource("2_4mrr5")
expand_mode = 5
stretch_mode = 4

[node name="TM" type="TextureRect" parent="TrainerAttached"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(48, 28)
layout_mode = 2
texture = ExtResource("3_bcik8")
expand_mode = 5
stretch_mode = 4

[node name="Plus" type="RichTextLabel" parent="TrainerAttached/TM"]
visible = false
layout_mode = 0
offset_left = -6.0
offset_top = 4.0
offset_right = 34.0
offset_bottom = 28.0
bbcode_enabled = true
text = "+"

[node name="EnergyTypes" parent="." instance=ExtResource("6_nykcf")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 2.0
offset_top = 147.0
offset_right = 194.0
offset_bottom = 171.0

[node name="TypeContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = -4.0
offset_top = 43.0
offset_right = 130.0
offset_bottom = 67.0
mouse_filter = 2
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Types" parent="TypeContainer" instance=ExtResource("4_5yd0i")]
layout_mode = 2

[node name="Types2" parent="TypeContainer" instance=ExtResource("4_5yd0i")]
visible = false
layout_mode = 2

[node name="Types3" parent="TypeContainer" instance=ExtResource("4_5yd0i")]
visible = false
layout_mode = 2

[node name="Types4" parent="TypeContainer" instance=ExtResource("4_5yd0i")]
visible = false
layout_mode = 2

[node name="Types5" parent="TypeContainer" instance=ExtResource("4_5yd0i")]
visible = false
layout_mode = 2

[node name="Types6" parent="TypeContainer" instance=ExtResource("4_5yd0i")]
visible = false
layout_mode = 2

[node name="DamageCounter" parent="." instance=ExtResource("8_0ajf4")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 168.0
offset_top = 36.0
offset_right = 200.0
offset_bottom = 68.0

[node name="Conditions" parent="." instance=ExtResource("9_0ajf4")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 3.0
offset_top = -22.0
offset_right = 67.0
offset_bottom = 74.0
grow_horizontal = 0
grow_vertical = 2

[node name="ChangeDisplay" parent="Conditions" instance=ExtResource("6_mc7hj")]
unique_name_in_owner = true
layout_mode = 2
